--- a/.github/workflows/matlab_tests.yml
+++ b/.github/workflows/matlab_tests.yml
@@ -15,3 +15,11 @@ jobs:
           release: R2023a
       - name: Run build tool
         uses: matlab-actions/run-build@v1
+      - name: Package artifacts
+        uses: dorny/test-reporter@v1
+        if: success() || failure()    
+        with:
+          name: MATLAB Test Results
+          path: '*.xml'    
+          working-directory: 'tests/artifacts'
+          reporter: java-junit
