--- a/.github/workflows/matlab_tests.yml
+++ b/.github/workflows/matlab_tests.yml
@@ -20,6 +20,6 @@ jobs:
         if: success() || failure()    
         with:
           name: MATLAB Test Results
-          path: '*.xml'    
+          path: 'results.xml'    
           working-directory: 'tests/artifacts'
           reporter: java-junit
