--- a/.github/workflows/matlab_tests.yml
+++ b/.github/workflows/matlab_tests.yml
@@ -27,8 +27,8 @@ jobs:
         uses: 5monkeys/cobertura-action@master
         with:
           path: 'tests/artifacts/coverage.xml'
-          only_changed_files: true
           minimum_coverage: 75
+          report_name: Coverage Report
       - name: Code Coverage Summary Report
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
