--- a/.github/workflows/matlab_tests.yml
+++ b/.github/workflows/matlab_tests.yml
@@ -5,7 +5,7 @@ jobs:
 
   test:
     name: Run MATLAB Tests and Package Artifacts
-    runs-on: ic-czc2399tyl
+    runs-on: Linux
     steps:
       - name: Check out repository
         uses: actions/checkout@v3
